[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "This program defines the difference between two data structures."
repository = "https://github.com/dim4ic/python-project-50"
classifiers = [ "Programming Language :: Python :: 3.1" ]
authors = ["dim4ick <romanoff_d@mail.ru>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.8.1"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
